[tool.poetry]
name = "ad-infinitum"
version = "0.1.0"
description = ""
authors = ["Adge Denkers <adge.denkers@gmail.com>"]
readme = "README.md"
packages = [{include = "ad_infinitum"}]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
base64 = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
